# naotool

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
naotool/: __init__.py  __version__.py  exception.py
naotool/cls/: __init__.py
naotool/deco/: __init__.py  compat.py  deco.py  funtool.py
naotool/httpn/: __init__.py
naotool/img/: __init__.py  get.py  gets.py  op.py
naotool/strs/: __init__.py
naotool/sub/: pixiv.py  xpostx.py
naotool/x/: __init__.py  client.py  xpostx.py
test/: __init__.py  test.py  test_deco.py  test_img.py
test/deco/: test_functool.py
test/img/: test_best_practices.py  test_img.py
test/sub/: test_pixiv.py
