[tool.poetry]
name = "naotool"
version = "0.1.0"
description = "A packge of utils or tools keeps Python sweet."
authors = ["tomorinao-www <1520872279@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <=3.13"
httpx = ">=0.27.2"
pillow = ">=11.0.0"
typeguard = "^4.3.0"
logging = ">=0.4.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
